@@ -39,9 +39,9 @@
 // Undefine HAVE_LONG_DOUBLE for Beta 4 since RedHat 5.0 comes with a borken
 // glibc
 
-#ifdef HAVE_LONG_DOUBLE
-#undef HAVE_LONG_DOUBLE
-#endif
+//#ifdef HAVE_LONG_DOUBLE
+//#undef HAVE_LONG_DOUBLE
+//#endif
 
 extern last_input_type last_input;
 extern item_contents   display_data;
